--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -27,5 +27,8 @@ jobs:
           pip install pipenv
           pipenv sync --dev
 
+      - name: Start containers
+        run: docker-compose -f "docker-compose.yml" up -d --build
+
       - name: Run tests
         run: pipenv run pytest
