--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -27,5 +27,27 @@ jobs:
           pip install pipenv
           pipenv sync --dev
 
-      - name: Run tests
-        run: pipenv run pytest
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        tags: arthurjguerra18/revwallet:${{ github.sha }}
+
+    - name: Start containers
+      run: docker compose up -d --build
+
+    - name: Run tests
+      run: pipenv run pytest
+
+    - name: Stop containers and remove volumes
+      if: always()
+      run: docker compose down -v
