--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -16,6 +16,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Set up Python
         id: python
         uses: actions/setup-python@v2
@@ -27,5 +36,12 @@ jobs:
           pip install pipenv
           pipenv sync --dev
 
+      - name: Start containers
+        run: docker compose up -d --build
+
       - name: Run tests
         run: pipenv run pytest
+      
+      - name: Stop containers and remove volumes
+        if: always()
+        run: docker compose down -v
