--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -6,3 +6,6 @@ scrape_configs:
   - job_name: 'revwallet_api'
     static_configs:
       - targets: ['revwallet_api:5000']
+
+remote_write:
+- url: http://localhost:9090/api/prom/push
