--- a/grafana-data-sources.yaml
+++ b/grafana-data-sources.yaml
@@ -3,21 +3,7 @@ apiVersion: 1
 datasources:
   - name: Prometheus
     type: prometheus
+    editable: true
+    is_default: true
     access: proxy
-    # Access mode - proxy (server in the UI) or direct (browser in the UI).
     url: http://prometheus:9090
-    jsonData:
-      httpMethod: POST
-      manageAlerts: true
-      prometheusType: Prometheus
-      prometheusVersion: 2.44.0
-      cacheLevel: 'High'
-      disableRecordingRules: false
-      incrementalQueryOverlapWindow: 10m
-      exemplarTraceIdDestinations:
-        - datasourceUid: revwallet_datasource_id
-          name: traceID
-
-        # Field with external link.
-        - name: traceID
-          url: 'http://grafana:3000/'
