--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,47 @@
 services:
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
+    volumes:
+      - ./loki-config.yaml:/etc/loki/local-config.yaml
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    networks:
+      - revwallet_network
+    healthcheck:
+      test: ["CMD-SHELL", "wget --spider --quiet http://localhost:3100/ready || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  alloy:
+    image: grafana/alloy:latest
+    container_name: alloy
+    depends_on:
+      loki:
+        condition: service_healthy
+    volumes:
+      - ./config.alloy:/etc/alloy/config.alloy
+      - ./logs/revwallet:/var/log/revwallet
+    ports:
+      - "12345:12345"
+    command: [
+      "run",
+      "--server.http.listen-addr=0.0.0.0:12345",
+      "--storage.path=/var/lib/alloy/data",
+      "/etc/alloy/config.alloy",
+    ]
+    networks:
+      - revwallet_network
+
   grafana:
     image: grafana/grafana:latest
+    depends_on:
+      loki:
+        condition: service_healthy
+      alloy:
+        condition: service_started
     entrypoint:
       - /usr/share/grafana/bin/grafana-server
       - --homepath=/usr/share/grafana
@@ -59,6 +100,8 @@ services:
         condition: service_started
       grafana:
         condition: service_started
+      alloy:
+        condition: service_started
     environment:
       DB_USERNAME: myuser
       DB_PASSWORD: mypassword
@@ -70,6 +113,8 @@ services:
       - revwallet_network
     links:
       - revwallet_db
+    volumes:
+      - ./logs/revwallet:/var/log/revwallet
 
 networks:
   revwallet_network:
