--- a/grafana-data-sources.yaml
+++ b/grafana-data-sources.yaml
@@ -7,3 +7,12 @@ datasources:
     is_default: true
     access: proxy
     url: http://prometheus:9090
+  - name: Loki
+    type: loki
+    access: proxy
+    orgId: 1
+    url: http://loki:3100
+    basicAuth: false
+    isDefault: false
+    version: 1
+    editable: false
