--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     image: grafana/loki:latest
     container_name: loki
     volumes:
-      - ./loki-config.yaml:/etc/loki/local-config.yaml
+      - ./config/loki/loki-config.yaml:/etc/loki/local-config.yaml
     ports:
       - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
@@ -22,7 +22,7 @@ services:
       loki:
         condition: service_healthy
     volumes:
-      - ./config.alloy:/etc/alloy/config.alloy
+      - ./config/alloy/config.alloy:/etc/alloy/config.alloy
       - ./logs/revwallet:/var/log/revwallet
     ports:
       - "12345:12345"
@@ -47,10 +47,10 @@ services:
       - --homepath=/usr/share/grafana
       - --config=/etc/grafana-config/grafana.ini
     volumes:
-      - ./grafana.ini:/etc/grafana-config/grafana.ini
-      - ./grafana-dashboard-config.yaml:/etc/grafana/provisioning/dashboards/grafana-dashboard-config.yaml
-      - ./grafana-data-sources.yaml:/etc/grafana/provisioning/datasources/grafana-data-sources.yaml
-      - ./grafana-dashboard.json:/etc/grafana/dashboards/grafana-dashboard.json
+      - ./config/grafana/grafana.ini:/etc/grafana-config/grafana.ini
+      - ./config/grafana/profisioning.yaml:/etc/grafana/provisioning/dashboards/grafana-dashboard-config.yaml
+      - ./config/grafana/data-sources.yaml:/etc/grafana/provisioning/datasources/grafana-data-sources.yaml
+      - ./config/grafana/dashboard.json:/etc/grafana/dashboards/grafana-dashboard.json
     ports:
       - "3000:3000"
     networks:
@@ -60,7 +60,7 @@ services:
     image: prom/prometheus:latest
     container_name: prometheus
     volumes:
-      - ./prometheus.yaml:/etc/prometheus/prometheus.yaml
+      - ./config/prometheus/prometheus.yaml:/etc/prometheus/prometheus.yaml
     command:
       - '--config.file=/etc/prometheus/prometheus.yaml'
     ports:
