feat: serve grafana behind nginx

--- a/config/grafana/grafana.ini
+++ b/config/grafana/grafana.ini
@@ -7,3 +7,8 @@ org_role = Admin
 enabled = true
 [users]
 default_theme = dark
+[server]
+domain = revwallet.com
+protocol = http
+root_url = http://revwallet.com/grafana/
+serve_from_sub_path = true
