--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -73,6 +73,12 @@ services:
       - "9090:9090"
     networks:
       - revwallet_network
+    healthcheck:
+      test: ["CMD", "wget", "http://localhost:9090"]
+      interval: 10s
+      timeout: 15s
+      retries: 10
+      start_period: 40s
 
   revwallet_db:
     image: postgres:latest
@@ -103,7 +109,7 @@ services:
       revwallet_db:
         condition: service_healthy
       prometheus:
-        condition: service_started
+        condition: service_healthy
       grafana:
         condition: service_healthy
       alloy:
@@ -128,8 +134,8 @@ services:
     volumes:
       - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./config/nginx/.htpasswd:/etc/nginx/.htpasswd
-      - ./config/nginx/index.html:/usr/share/nginx/html/index.html
-      - ./config/nginx/404.html:/usr/share/nginx/html/404.html
+      - ./config/nginx/index.html:/usr/share/nginx/www/index.html
+      - ./config/nginx/404.html:/usr/share/nginx/www/404.html
     ports:
       - "80:80"
     networks:
@@ -138,7 +144,7 @@ services:
       revwallet_api:
         condition: service_started
       prometheus:
-        condition: service_started
+        condition: service_healthy
       grafana:
         condition: service_healthy
       alloy:
