feat: serve prometheus behind nginx

--- a/config/grafana/data-sources.yaml
+++ b/config/grafana/data-sources.yaml
@@ -6,7 +6,7 @@ datasources:
     editable: true
     is_default: true
     access: proxy
-    url: http://prometheus:9090
+    url: http://prometheus:9090/prometheus
   - name: Loki
     type: loki
     access: proxy
