--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -33,7 +33,11 @@ http {
     }
 
     upstream grafana {
-    server grafana:3000;
+        server grafana:3000;
+    }
+
+    upstream prometheus {
+        server prometheus:9090;
     }
 
     server {
@@ -62,6 +66,16 @@ http {
             proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host $host;
             proxy_pass http://grafana;
+        }
+
+        location /prometheus/ {
+            auth_basic "Restricted Access";
+            auth_basic_user_file /etc/nginx/.htpasswd;
+            proxy_pass http://prometheus;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         error_page 404 /404.html;
