--- a/config/prometheus/prometheus.yaml
+++ b/config/prometheus/prometheus.yaml
@@ -8,4 +8,4 @@ scrape_configs:
       - targets: ['revwallet_api:5000']
 
 remote_write:
-- url: http://localhost:9090/api/prom/push
+- url: http://localhost:9090/prometheus/api/prom/push
