--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -46,7 +46,8 @@ http {
 
     server {
         listen 80;
-        server_name revwallet.com;
+        server_name revwallet.com
+                    127.0.0.1;
 
         location /wallet {
             auth_basic off;
