Access services trough reverse proxy only (#40)

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -28,8 +28,8 @@ http {
 
     # This is required to proxy Grafana Live WebSocket connections.
     map $http_upgrade $connection_upgrade {
-    default upgrade;
-    '' close;
+        default upgrade;
+        '' close;
     }
 
     upstream grafana {
@@ -40,13 +40,18 @@ http {
         server prometheus:9090;
     }
 
+    upstream revwallet_api {
+        server revwallet_api:5000;
+    }
+
     server {
         listen 80;
-        server_name revwallet.com;
+        server_name revwallet.com
+                    127.0.0.1;
 
         location /wallet {
             auth_basic off;
-            proxy_pass http://revwallet_api:5000/wallet/;
+            proxy_pass http://revwallet_api/wallet/;
         }
 
         # Admin paths
