feat: deploy with helm in k8s

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -75,8 +75,8 @@ http {
         server prometheus:9090;
     }
 
-    upstream revwallet_api {
-        server revwallet_api:5000;
+    upstream revwallet-api {
+        server revwallet-api:5000;
     }
 
     server {
@@ -86,7 +86,7 @@ http {
 
         location /wallet {
             auth_basic off;
-            proxy_pass http://revwallet_api/wallet/;
+            proxy_pass http://revwallet-api/wallet/;
         }
 
         # Admin paths
