--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -13,7 +13,7 @@ http {
     default_type application/octet-stream;
 
     root /usr/share/nginx/www;
-    index index.html;
+    index revwallet.html;
 
     log_format json_analytics escape=json '{'
         '"msec": "$msec", ' # request unixtime in seconds with a milliseconds resolution
