--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,16 +1,19 @@
 user nginx;
 worker_processes auto;
 
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
+error_log /tmp/error.log warn;
+#pid /var/run/nginx.pid;
 
 events {
     worker_connections 1024;
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+    client_body_temp_path /tmp/client_body_temp;
+    proxy_temp_path /tmp/proxy_temp;
+    fastcgi_temp_path /tmp/fastcgi_temp;
+    uwsgi_temp_path /tmp/uwsgi_temp;
+    scgi_temp_path /tmp/scgi_temp;
 
     root /usr/share/nginx/www;
     index revwallet.html;
@@ -54,7 +57,7 @@ http {
         '"gzip_ratio": "$gzip_ratio"'
         '}';
 
-    access_log /var/log/nginx/json_access.log json_analytics;
+    access_log /tmp/json_access.log json_analytics;
 
     sendfile on;
     keepalive_timeout 65;
@@ -72,7 +75,7 @@ http {
     }
 
     upstream prometheus {
-        server prometheus:9090;
+        server prometheus-server:9090;
     }
 
     upstream revwallet-api {
@@ -81,46 +84,59 @@ http {
 
     server {
         listen 8080;
-        server_name revwallet.com
-                    127.0.0.1;
+        server_name _;
+        error_page 404 /404.html;
+
+        location = /404.html {
+            root /opt/bitnami/nginx/html/;
+            internal;
+        }
+
+        location / {
+            root /opt/bitnami/nginx/html/;
+            index revwallet.html;
+            try_files $uri $uri/ =404;
+        }
 
         location /wallet {
             auth_basic off;
             proxy_pass http://revwallet-api/wallet/;
         }
 
-        # Admin paths
-        location /grafana/ {
-            auth_basic "Restricted Access";
-            auth_basic_user_file /etc/nginx/.htpasswd;
-            proxy_set_header Host $host;
-            proxy_pass http://grafana;
+        location /metrics {
+            auth_basic off;
+            proxy_pass http://revwallet-api/metrics/;
         }
+
+        # Admin paths
+        # location /grafana/ {
+        #     auth_basic "Restricted Access";
+        #     auth_basic_user_file /tmp/.htpasswd;
+        #     proxy_set_header Host $host;
+        #     proxy_pass http://grafana/;
+        # }
 
         # Proxy Grafana Live WebSocket connections.
-        location /grafana/api/live/ {
-            auth_basic "Restricted Access";
-            auth_basic_user_file /etc/nginx/.htpasswd;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
-            proxy_set_header Host $host;
-            proxy_pass http://grafana;
-        }
+        # location /grafana/api/live/ {
+        #     auth_basic "Restricted Access";
+        #     auth_basic_user_file /tmp/.htpasswd;
+        #     proxy_http_version 1.1;
+        #     proxy_set_header Upgrade $http_upgrade;
+        #     proxy_set_header Connection $connection_upgrade;
+        #     proxy_set_header Host $host;
+        #     proxy_pass http://grafana/;
+        #     proxy_redirect http://grafana/ /grafana/;
+        # }
 
-        location /prometheus/ {
-            auth_basic "Restricted Access";
-            auth_basic_user_file /etc/nginx/.htpasswd;
-            proxy_pass http://prometheus;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        error_page 404 /404.html;
-        location = /404.html {
-            internal;
-        }
+        # location /prometheus/ {
+        #     auth_basic "Restricted Access";
+        #     auth_basic_user_file /tmp/.htpasswd;
+        #     proxy_pass http://prometheus/;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
+        #     proxy_redirect http://prometheus/ /prometheus/;
+        # }
     }
 }
