feat: setup alloy and loki

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -74,9 +74,9 @@ http {
         server grafana:3000;
     }
 
-    upstream prometheus {
-        server prometheus-server:9090;
-    }
+    # upstream prometheus {
+    #     server prometheus-server:9090;
+    # }
 
     upstream revwallet-api {
         server revwallet-api:5000;
