--- a/k8s/prometheus/values.yaml
+++ b/k8s/prometheus/values.yaml
@@ -16,12 +16,15 @@ prefixURL: ""
 ## Maybe same with Ingress host name
 baseURL: ""
 
+server:
+  global:
+    scrape_interval: 15s
+    evaluation_interval: 15s
+
 serverFiles:
   prometheus.yml:
     scrape_configs:
       - job_name: 'revwallet-api'
         scheme: http
-        scrape_interval: 15s
-        evaluation_interval:  15s
         static_configs:
-          - targets: ['revwallet-api:5000']
+        - targets: ['revwallet-api:5000']
