feat: add k8s tests to ci

--- a/k8s/revwallet-api-chart/values.yaml
+++ b/k8s/revwallet-api-chart/values.yaml
@@ -22,7 +22,8 @@ serviceAccount:
   name: "revwallet-api-sa"
 
 podAnnotations: {}
-podLabels: {}
+podLabels:
+  app: revwallet-api
 
 podSecurityContext: {}
 
