--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,28 +9,5 @@ on:
 
 jobs:
   tests:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        id: python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install pipenv
-        run: |
-          pip install pipenv
-
-      - name: Start containers
-        run: make compose-up
-
-      - name: Run tests
-        run: make tests
-      
-      - name: Stop containers and remove volumes
-        if: always()
-        run: make compose-down
+    secrets: inherit
+    uses: ./.github/workflows/tests.yaml
