--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -74,9 +74,9 @@ http {
         server grafana:3000;
     }
 
-    # upstream prometheus {
-    #     server prometheus-server:9090;
-    # }
+    upstream prometheus {
+        server prometheus-server:80;
+    }
 
     upstream revwallet-api {
         server revwallet-api:5000;
@@ -108,6 +108,17 @@ http {
             proxy_pass http://revwallet-api/metrics/;
         }
 
+        location /prometheus/ {
+            auth_basic "Restricted Access";
+            auth_basic_user_file /tmp/.htpasswd;
+            proxy_pass http://prometheus/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect / /prometheus/;
+        }
+
         # Admin paths
         # location /grafana/ {
         #     auth_basic "Restricted Access";
@@ -126,17 +137,6 @@ http {
         #     proxy_set_header Host $host;
         #     proxy_pass http://grafana/;
         #     proxy_redirect http://grafana/ /grafana/;
-        # }
-
-        # location /prometheus/ {
-        #     auth_basic "Restricted Access";
-        #     auth_basic_user_file /tmp/.htpasswd;
-        #     proxy_pass http://prometheus/;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        #     proxy_redirect http://prometheus/ /prometheus/;
         # }
     }
 }
