--- a/k8s/prometheus/values.yaml
+++ b/k8s/prometheus/values.yaml
@@ -7,10 +7,7 @@ prometheus-pushgateway:
 kubeStateMetrics:
   enabled: false
 
-## The URL prefix at which the container can be accessed. Useful in the case the '-web.external-url' includes a slug
-## so that the various internal URLs are still able to access as they are in the default case.
-## (Optional)
-prefixURL: ""
+prefixURL: "/prometheus"
 
 ## External URL which can access prometheus
 ## Maybe same with Ingress host name
