--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -71,7 +71,7 @@ http {
     }
 
     upstream grafana {
-        server grafana:3000;
+        server grafana:80;
     }
 
     upstream prometheus {
@@ -103,16 +103,11 @@ http {
             proxy_pass http://revwallet-api/wallet/;
         }
 
-        location /metrics {
-            auth_basic off;
-            proxy_pass http://revwallet-api/metrics/;
-        }
-
         location /prometheus/ {
-            auth_basic "Restricted Access";
-            auth_basic_user_file /tmp/.htpasswd;
+            #auth_basic "Restricted Access";
+            #auth_basic_user_file /tmp/.htpasswd;
             proxy_pass http://prometheus/;
-            proxy_set_header Host $host;
+            proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
@@ -120,23 +115,21 @@ http {
         }
 
         # Admin paths
-        # location /grafana/ {
-        #     auth_basic "Restricted Access";
-        #     auth_basic_user_file /tmp/.htpasswd;
-        #     proxy_set_header Host $host;
-        #     proxy_pass http://grafana/;
-        # }
+        location /grafana/ {
+            #auth_basic "Restricted Access";
+            #auth_basic_user_file /tmp/.htpasswd;
+            proxy_pass http://grafana;
+        }
 
         # Proxy Grafana Live WebSocket connections.
-        # location /grafana/api/live/ {
-        #     auth_basic "Restricted Access";
-        #     auth_basic_user_file /tmp/.htpasswd;
-        #     proxy_http_version 1.1;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection $connection_upgrade;
-        #     proxy_set_header Host $host;
-        #     proxy_pass http://grafana/;
-        #     proxy_redirect http://grafana/ /grafana/;
-        # }
+        location /grafana/api/live/ {
+            #auth_basic "Restricted Access";
+            #auth_basic_user_file /tmp/.htpasswd;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Host $http_host;
+            proxy_pass http://grafana;
+        }
     }
 }
