--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,9 +63,9 @@ services:
       timeout: 10s
       retries: 5
 
-  prometheus-server:
+  prometheus:
     image: prom/prometheus:latest
-    container_name: prometheus-server
+    container_name: prometheus
     volumes:
       - ./config/prometheus/prometheus.yaml:/etc/prometheus/prometheus.yaml
     command:
@@ -111,12 +111,6 @@ services:
     depends_on:
       revwallet-db:
         condition: service_healthy
-      prometheus-server:
-        condition: service_healthy
-      grafana:
-        condition: service_healthy
-      alloy:
-        condition: service_started
     environment:
       DB_USERNAME: revwallet
       DB_PASSWORD: mypassword
@@ -132,14 +126,14 @@ services:
       - ./logs/revwallet:/var/log/revwallet
 
   nginx:
-    image: nginx:latest
+    image: docker.io/bitnami/nginx:1.27.1-debian-12-r0
     container_name: nginx
     volumes:
-      - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./config/nginx/nginx.conf:/opt/bitnami/nginx/conf/nginx.conf
       - ./config/nginx/.htpasswd:/etc/nginx/.htpasswd
-      - ./config/nginx/revwallet.html:/usr/share/nginx/www/revwallet.html
-      - ./config/nginx/404.html:/usr/share/nginx/www/404.html
-      - ./logs/nginx:/var/log/nginx
+      - ./config/nginx/revwallet.html:/opt/bitnami/nginx/html/revwallet.html
+      - ./config/nginx/404.html:/opt/bitnami/nginx/html/404.html
+      - ./logs/nginx:/tmp/nginx
     ports:
       - "8080:8080"
     networks:
@@ -147,13 +141,9 @@ services:
     depends_on:
       revwallet-api:
         condition: service_started
-      prometheus-server:
+      prometheus:
         condition: service_healthy
       grafana:
-        condition: service_healthy
-      alloy:
-        condition: service_started
-      loki:
         condition: service_healthy
 
 networks:
