--- a/k8s/nginx/nginx.conf
+++ b/k8s/nginx/nginx.conf
@@ -71,11 +71,11 @@ http {
     }
 
     upstream grafana {
-        server grafana:3000;
+        server grafana:80;
     }
 
     upstream prometheus {
-        server prometheus:9090;
+        server prometheus-server:80;
     }
 
     upstream revwallet-api {
@@ -88,14 +88,18 @@ http {
         error_page 404 /404.html;
 
         location = /404.html {
+            root /opt/bitnami/nginx/html/;
             internal;
         }
 
         location / {
+            root /opt/bitnami/nginx/html/;
+            index revwallet.html;
             try_files $uri $uri/ =404;
         }
 
         location /wallet {
+            auth_basic off;
             proxy_pass http://revwallet-api/wallet/;
         }
 
