just to save it

--- a/config/grafana/grafana.ini
+++ b/config/grafana/grafana.ini
@@ -8,7 +8,6 @@ enabled = true
 [users]
 default_theme = dark
 [server]
-domain = revwallet.com
 protocol = http
-root_url = http://revwallet.com/grafana/
+root_url = http://localhost:8080/grafana/
 serve_from_sub_path = true
