--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -4,7 +4,7 @@ on:
   workflow_call:
 
 jobs:
-  tests:
+  tests-compose:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,30 +21,32 @@ jobs:
         run: |
           pip install pipenv
 
-      # Tests in Docker Compose
       - name: Start containers
         run: make compose-up
 
       - name: Run tests for Docker Compose
         run: make tests
       
-      - name: Stop containers and remove volumes
-        if: always()
-        run: make compose-down
+  tests-k8s:
+    runs-on: ubuntu-latest
 
-      # Tests in K8s
-      - name: Setup K8s and Helm Repos
-        run: make setup
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Deploy to K8s
-        run: make deploy
+      - name: Set up Python
+        id: python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-      - name: Port-Foward to K8s
-        run: make port-forward
+      - name: Install pipenv
+        run: |
+          pip install pipenv
+
+      - name: Deploy API in K8s
+        run: make create deploy
 
       - name: Run tests for K8s
         run: make tests
       
-      - name: Stop port-forward
-        if: always()
-        run: make stop-port-forward
