feat: add orchestration to makefile

--- a/k8s/prometheus/values.yaml
+++ b/k8s/prometheus/values.yaml
@@ -25,3 +25,6 @@ serverFiles:
         scheme: http
         static_configs:
         - targets: ['revwallet-api:5000']
+
+commonMetaLabels:
+  app: prometheus
