feat: change api chart folder

--- a/charts/revwallet-api/templates/pvc.yaml
+++ b/charts/revwallet-api/templates/pvc.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: {{ .Values.persistentVolumeClaim.name }}
   labels:
-    {{- include "revwallet-api-chart.labels" . | nindent 4 }}
+    {{- include "revwallet-api.labels" . | nindent 4 }}
 spec:
   accessModes:
     - {{ .Values.persistentVolumeClaim.accessModes | default "ReadWriteOnce" }}
