--- a/charts/revwallet-api/templates/service.yaml
+++ b/charts/revwallet-api/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "revwallet-api-chart.fullname" . }}
+  name: {{ include "revwallet-api.fullname" . }}
   labels:
-    {{- include "revwallet-api-chart.labels" . | nindent 4 }}
+    {{- include "revwallet-api.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "revwallet-api-chart.selectorLabels" . | nindent 4 }}
+    {{- include "revwallet-api.selectorLabels" . | nindent 4 }}
