--- a/charts/revwallet-api/templates/serviceaccount.yaml
+++ b/charts/revwallet-api/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "revwallet-api-chart.serviceAccountName" . }}
+  name: {{ include "revwallet-api.serviceAccountName" . }}
   labels:
-    {{- include "revwallet-api-chart.labels" . | nindent 4 }}
+    {{- include "revwallet-api.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
