--- a/helm/revwallet-api/values.yaml
+++ b/helm/revwallet-api/values.yaml
@@ -1,7 +1,7 @@
 image:
   repository: arthurjguerra18/revwallet
-  tag: "v0.5.0"
-
+  tag: v0.5.0
+  
 env:
   DB_USERNAME: revwallet
   DB_PASSWORD: mypassword
