feat: add new secrets db creds

--- a/helm/revwallet-db/secrets.yaml
+++ b/helm/revwallet-db/secrets.yaml
@@ -4,6 +4,10 @@ metadata:
   name: revwallet-db
 type: Opaque
 stringData:
+  dbuser: revwallet
+  dbpassword: mypassword
+  dbname: revwallet
+  dbhost: revwallet-db
   postgres-password: mypassword
   password: mypassword
   replication-password: mypassword
