feat: ignore changes in tf for k8s and compose

--- a/.github/workflows/compose-ci.yaml
+++ b/.github/workflows/compose-ci.yaml
@@ -8,6 +8,7 @@ on:
       - 'img/**'
       - 'charts/**'
       - 'helm/**'
+      - 'terraform/**'
       - '.github/workflows/charts-ci.yaml'
 
 jobs:
