--- a/.github/workflows/local-k8s-ci.yaml
+++ b/.github/workflows/local-k8s-ci.yaml
@@ -7,6 +7,7 @@ on:
       - 'docs/**'
       - 'img/**'
       - 'charts/**'
+      - 'terraform/**'
       - '.github/workflows/charts-ci.yaml'
       - '.github/workflows/tf-ci.yaml'
 
