feat: ignore changes in tf for k8s and compose

--- a/.github/workflows/compose-ci.yaml
+++ b/.github/workflows/compose-ci.yaml
@@ -10,6 +10,7 @@ on:
       - 'helm/**'
       - 'terraform/**'
       - '.github/workflows/charts-ci.yaml'
+      - '.github/workflows/tf-ci.yaml'
 
 jobs:
   tests-compose:
