Ignore changes in Terraform for k8s and compose (#161)

--- a/.github/workflows/compose-ci.yaml
+++ b/.github/workflows/compose-ci.yaml
@@ -8,7 +8,9 @@ on:
       - 'img/**'
       - 'charts/**'
       - 'helm/**'
+      - 'terraform/**'
       - '.github/workflows/charts-ci.yaml'
+      - '.github/workflows/tf-ci.yaml'
 
 jobs:
   tests-compose:
