--- a/.github/workflows/local-k8s-ci.yaml
+++ b/.github/workflows/local-k8s-ci.yaml
@@ -1,4 +1,4 @@
-name: Local K8s CI (by @${{ github.actor }})
+name: Local K8s CI
 
 on:
   pull_request_target:
@@ -7,6 +7,7 @@ on:
       - 'docs/**'
       - 'img/**'
       - 'charts/**'
+      - 'terraform/**'
       - '.github/workflows/charts-ci.yaml'
       - '.github/workflows/tf-ci.yaml'
 
